<resources>
    <string name="app_name">UCSM_reservas_clientes</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="btnlogin">Iniciar Sesion</string>
    <string name="invitado">Invitado</string>
    <string name="ayuda">Ayuda</string>
    <string name="bienvenida">Bienvenido a la aplicacion de Reservas \n de la Universidad Catolica \n de Santa Maria</string>
    <string name="reserva">Elija el tipo de reserva</string>
    <string name="reserva_audio">Reservar sala de estudio</string>
    <string name="reserva_aula">Reservar aula</string>
    <string name="telefono">Telefono: 983342810</string>
    <string name="Llamar">Llamar</string>
    <string name="Enviar_mensaje">Enviar mensaje:</string>
    <string name="Enviar">Enviar</string>
    <string-array name="l_pabellones">
        <item>A</item>
    </string-array>
    <string-array name="l_aulas">
        <item>202</item>
    </string-array>
    <string-array name="dias">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
    </string-array>
    <string-array name="hora">
        <item>9-11</item>
        <item>11-1</item>
        <item>1-3</item>
        <item>3-5</item>
        <item>5-7</item>
    </string-array>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Reservas de Aulas</string>
    <string name="nav_header_subtitle">Universidad Catolica de Santa Maria</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
