<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/fondo_fragments"
    tools:context=".contactenos">


    <ImageView
        android:layout_marginBottom="8dp"
        android:src="@drawable/ubicacion"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <TextView
        android:textSize="25dp"
        android:textColor="@color/negro"
        android:gravity="center"
        android:layout_weight="0.5"
        android:text="@string/telefono"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/btn_llamar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_weight="1"
        android:text="@string/Llamar"
        android:textAllCaps="false"
        android:textSize="15dp" />
    <TextView
        android:layout_marginRight="72dp"
        android:layout_marginLeft="72dp"
        android:textSize="20dp"
        android:text="@string/Enviar_mensaje"
       android:textAlignment="center"
        android:textColor="@color/negro"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <EditText
        android:id="@+id/txt_mensaje"
        android:textColor="@color/negro"
        android:background=" #cacfd2 "
        android:layout_marginRight="72dp"
        android:layout_marginLeft="72dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button

        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/btn_enviar"
        android:text="@string/Enviar"
        android:textSize="15dp"
        android:textAllCaps="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_marginRight="136dp"
        android:layout_marginLeft="136dp"
        android:layout_height="0dp" />


</LinearLayout>