<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_inicio"
    android:alpha="0.9"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:gravity="bottom"
        android:alpha="1"
        android:weightSum="10"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/txt_user"
            android:hint="@string/usuario"
            android:textColorHint="@color/negro"
            android:layout_width="match_parent"
            android:layout_weight="3.3"
            android:layout_height="0dp"
            android:background="@drawable/txt_logeo"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_usuario"/>
        <EditText
            android:layout_weight="3.3"
            android:inputType="numberPassword"
            android:id="@+id/txt_passw"
            android:background="@drawable/txt_logeo"
            android:hint="@string/password"
            android:textColorHint="@color/negro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:drawableLeft="@drawable/ic_password"
            />
        <Button
            android:layout_weight="3.3"
            android:id="@+id/button"
            android:text="@string/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/boton_redondo"
            android:onClick="Logearse"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:weightSum="10"
        android:layout_height="0dp"
        android:layout_marginBottom="160dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp">
        <TextView
            android:textColor="@color/blanco"
            android:textSize="20dp"
            android:text="@string/invitado"
            android:textAlignment="center"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/blanco"
            android:textSize="20dp"
            android:text="@string/ayuda"
            android:textAlignment="center"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5933390765630228/6297818147">
    </com.google.android.gms.ads.AdView>

</LinearLayout>