<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/fondo_fragments"
    android:weightSum="10"
    tools:context=".reserva">

    <TextView
        android:text="@string/reserva"
        android:textSize="20dp"
        android:textColor="@color/blanco"
        android:layout_weight="0.5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"/>
    <LinearLayout
        android:background="@drawable/redondear_bordes"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="10"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/ic_aula"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btn_aula"
            android:text="@string/reserva_aula"
            android:textAllCaps="false"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/redondear_bordes"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="10"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/ic_proyector"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btn_sala"
            android:text="@string/reserva_audio"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>





</LinearLayout>